deploy/k8s/central.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-svc
spec:
  replicas: 1
  selector: { matchLabels: { app: central-svc } }
  template:
    metadata: { labels: { app: central-svc } }
    spec:
      containers:
      - name: central-svc
        image: DOCKERHUB_USER/central-svc:latest
        ports: [{ containerPort: 8080 }]
        readinessProbe:
          httpGet: { path: "/agricultores", port: 8080 }
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: "/agricultores", port: 8080 }
          initialDelaySeconds: 60
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: central-svc
spec:
  selector: { app: central-svc }
  ports: [{ port: 8080, targetPort: 8080 }]
  type: ClusterIP
