deploy/k8s/facturacion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facturacion-svc
spec:
  replicas: 1
  selector: { matchLabels: { app: facturacion-svc } }
  template:
    metadata:
      labels: { app: facturacion-svc }
    spec:
      containers:
      - name: facturacion-svc
        image: DOCKERHUB_USER/facturacion-svc:latest
        ports: [{ containerPort: 8082 }]
        readinessProbe:
          httpGet: { path: "/health", port: 8082 }
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: "/health", port: 8082 }
          initialDelaySeconds: 60
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: facturacion-svc
spec:
  selector: { app: facturacion-svc }
  ports: [{ port: 8082, targetPort: 8082 }]
  type: ClusterIP
