deploy/k8s/inventario.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventario-svc
spec:
  replicas: 1
  selector: { matchLabels: { app: inventario-svc } }
  template:
    metadata: { labels: { app: inventario-svc } }
    spec:
      containers:
      - name: inventario-svc
        image: DOCKERHUB_USER/inventario-svc:latest
        ports: [{ containerPort: 8081 }]
        readinessProbe:
          httpGet: { path: "/insumos", port: 8081 }
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: "/insumos", port: 8081 }
          initialDelaySeconds: 60
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: inventario-svc
spec:
  selector: { app: inventario-svc }
  ports: [{ port: 8081, targetPort: 8081 }]
  type: ClusterIP
